[gd_scene load_steps=3 format=2]

[ext_resource path="res://Engine/GameObjects/Core/Trigger/Player/DamageArea/DamageArea.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=3]
radius = 0.3

[node name="DamageArea" type="Area" groups=[
"PLAYER_LISTENER",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
monitorable = false
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="RestoreTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_DamageArea_area_entered"]
[connection signal="timeout" from="RestoreTimer" to="." method="_on_RestoreTimer_timeout"]
